ack, unrelated, fix the outfit not logged in x scrollbar :/

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -584,6 +584,7 @@ body.outfits-edit
       text-align: center
       
       img
+        width: 100%
         border:
           color: $module-border-color
           style: solid
